// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Tabs Renders Location Tabs with Mock Data 1`] = `
<MaterialTopTabNavigator
  tabBarOptions={
    Object {
      "activeTintColor": "#0071e9",
      "inactiveTintColor": "#616161",
      "indicatorStyle": Object {
        "backgroundColor": "#0071e9",
      },
      "style": Object {
        "backgroundColor": "#ffffffff",
      },
    }
  }
>
  <Screen
    name="[missing \\"en.LOCATION.FLOORS\\" translation] (2)"
  >
    [Function]
  </Screen>
  <Screen
    name="[missing \\"en.LOCATION.RESERVES\\" translation] (3)"
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Empty Data 1`] = `
<MaterialTopTabNavigator
  tabBarOptions={
    Object {
      "activeTintColor": "#0071e9",
      "inactiveTintColor": "#616161",
      "indicatorStyle": Object {
        "backgroundColor": "#0071e9",
      },
      "style": Object {
        "backgroundColor": "#ffffffff",
      },
    }
  }
>
  <Screen
    name="[missing \\"en.LOCATION.FLOORS\\" translation] (0)"
  >
    [Function]
  </Screen>
  <Screen
    name="[missing \\"en.LOCATION.RESERVES\\" translation] (0)"
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Large Location Data 1`] = `
<MaterialTopTabNavigator
  tabBarOptions={
    Object {
      "activeTintColor": "#0071e9",
      "inactiveTintColor": "#616161",
      "indicatorStyle": Object {
        "backgroundColor": "#0071e9",
      },
      "style": Object {
        "backgroundColor": "#ffffffff",
      },
    }
  }
>
  <Screen
    name="[missing \\"en.LOCATION.FLOORS\\" translation] (100)"
  >
    [Function]
  </Screen>
  <Screen
    name="[missing \\"en.LOCATION.RESERVES\\" translation] (100)"
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;
